force-app/main/default/objects/MD_Trigger_Handler__mdt/MD_Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <label>MD Trigger Handler</label>
    <pluralLabel>MD Trigger Handlers</pluralLabel>
</CustomObject>