force-app/main/default/objects/MD_Trigger_Handler__mdt/fields/Enable_Recursion_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Enable_Recursion_Blocker__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Recursion Blocker</label>
    <type>Checkbox</type>
</CustomField>