force-app/main/default/objects/MD_Trigger_Handler__mdt/fields/Is_Master_Setting__c.field-meta.xml
<CustomField>
    <fullName>Is_Master_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be a master setting record. This allows for all triggers in the system to be turned off by unchecking the Enabled checkbox on this record and leaving Object blank. If Object has a value, this will control all handlers for that object</inlineHelpText>
    <label>Is Master Setting</label>
    <type>Checkbox</type>
</CustomField>