force-app/main/default/objects/MD_Trigger_Handler__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>Object the trigger handler will fire on. If &quot;Is Master Setting&quot; is checked and Object isn&apos;t blank, then it will control all handlers for that object, otherwise it will control all handlers.</inlineHelpText>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>MD_Trigger_Handlers</relationshipLabel>
    <relationshipName>MD_Trigger_Handlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>