force-app/main/default/objects/MD_Trigger_Handler__mdt/validationRules/Only_All_Setting_Can_Have_No_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_All_Setting_Can_Have_No_Object</fullName>
    <active>true</active>
    <errorConditionFormula>!Is_Master_Setting__c &amp;&amp; Object__c == NULL</errorConditionFormula>
    <errorDisplayField>Object__c</errorDisplayField>
    <errorMessage>Only the &quot;Is Master Setting&quot; record can have a blank object.</errorMessage>
</ValidationRule>